# agentcli

./: .env-example  .gitignore  README.md  pyproject.toml
src/agentcli/: __init__.py  cli.py
src/agentcli/providers/: azure_llm_provider.py
src/agentcli/tools/: financial_calculator.py
