[project]
name = "agentcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "robert baxter", email = "baxterrp@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[project.scripts]
agentcli = "agentcli.cli:cli"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
