[project]
name = "agentcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "robert baxter", email = "baxterrp@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.25.3",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "typer>=0.27.0",
]

[project.scripts]
agentcli = "agentcli.cli:cli"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
